--- a/experiment4c/css/style.css
+++ b/experiment4c/css/style.css
@@ -11,7 +11,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(203, 237, 196);
+    font-family: verdana, sans-serif;
+    margin: 2em;
+    background-color: rgba(255, 237, 211);
 }
 
 #canvas-container {
